# INFOH414_project

./: .gitignore  INFOH414_Project_Swarm-Robotics_Quentin_Delhaye_controller.lua  README.md  SR_Project_H414.tar  controller.lua  output.txt
SR_Project_H414/: controller.lua  decision-making.xml  decision-making_no-opengl.xml
SR_Project_H414/src/: CMakeLists.txt  decision_making.cpp  decision_making.h
analysis/: .~lock.data.csv#  .~lock.data002.ods#  .~lock.data003.ods#  .~lock.data004.ods#  data.csv  data.ods  data002.csv  data002.ods  data003.csv  data003.ods  data004.ods  output001.txt  output002.txt  output003.txt  output004.txt  parse.pl
presentation/: presentation.aux  presentation.nav  presentation.tex  presentation.toc
report/: Diagram1.dia  Diagram2.dia  report.aux  report.tex
success/: output001.txt
